update improvements fig

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 
 <div >
 	<h2  class="title">Improvements</h2>
-	<img src="assets/figures/improvements.jpeg">
+	<img src="assets/figures/improvements.png">
 </div>
 <div>
 	<p class="section" id="paper"><h2 class="title">Paper</h2></p>
